# component-adaptive-card

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  component.manifest.json  dev.md
.github/workflows/: adaptive-card-nightly-chaos.yml  adaptive-card-pr-gate.yml  ci.yml  dev-publish.yml  release.yml
.i18n/: translator-state.json
assets/i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
ci/: check_host_state_capability.sh  check_matrix_gtests.sh  local_check.sh  prefetch_canonical_wit.sh  prepare_github_release.sh  run_ci_tests.sh  run_nightly_chaos_local.sh  sync_dist_wasm.sh
config/: supported_locales.json
corpus/2026-04-10/101/: replay.txt
docs/: adaptive-card-design.md  test.md
e2e/: adaptive-card.json  answers.json
flows/: custom.ygtc  default.ygtc
schemas/: adaptive-card.invocation.v1.schema.json  component.schema.json
src/: config.rs  i18n.rs  interaction.rs  lib.rs  model.rs  render.rs  trace.rs  validation.rs
tests/: conformance.rs
tests/fixtures/: matrix_spec.yaml
tests/gtests/README/: 01_quickstart_inline.gtest  03_interaction_submit.gtest
tests/gtests/matrix/: README.md
tests/gtests/matrix/full/: case_0001.gtest  case_0002.gtest  case_0003.gtest  case_0004.gtest  case_0005.gtest  case_0006.gtest  case_0007.gtest  case_0008.gtest  case_0009.gtest  case_0010.gtest  case_0011.gtest  case_0012.gtest  case_0013.gtest  case_0014.gtest  case_0015.gtest  case_0016.gtest  case_0017.gtest  case_0018.gtest  case_0019.gtest  case_0020.gtest  case_0021.gtest  case_0022.gtest  case_0023.gtest  case_0024.gtest  case_0025.gtest  case_0026.gtest  case_0027.gtest  case_0028.gtest  case_0029.gtest  case_0030.gtest  case_0031.gtest  case_0032.gtest  case_0033.gtest  case_0034.gtest  case_0035.gtest  case_0036.gtest  case_0037.gtest  case_0038.gtest  case_0039.gtest  case_0040.gtest  (+8 more)
tests/gtests/matrix/pairwise/: case_0001.gtest  case_0002.gtest  case_0003.gtest  case_0004.gtest  case_0005.gtest  case_0006.gtest  case_0007.gtest  case_0008.gtest  case_0009.gtest  case_0010.gtest  case_0011.gtest  case_0012.gtest  case_0013.gtest  case_0014.gtest  case_0015.gtest  case_0016.gtest  case_0017.gtest  case_0018.gtest  case_0019.gtest  case_0020.gtest  case_0021.gtest  case_0022.gtest  case_0023.gtest  case_0024.gtest  case_0025.gtest  case_0026.gtest  (+4 more)
tests/tools/: gen_matrix
(+22 files in other folders)
