[package]
name = "component-adaptive-card"
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.91"
description = "Greentic component component-adaptive-card"
repository = "https://github.com/greenticai/component-adaptive-card"
build = "build.rs"
authors = [
    "maarten",
]

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
world = "greentic:component/component-v0-v6-v0@0.6.0"

[lib]
crate-type = [
    "cdylib",
    "rlib",
]

[dependencies]
serde_json = "1"
thiserror = "2"
once_cell = "1.19"
handlebars = "6"
blake3 = "1"
ciborium = "0.2"

[dependencies.serde]
version = "1"
features = [
    "derive",
]

[dependencies.greentic-types]
version = ">=1.1.0-dev, <1.2.0-0"

[dependencies.greentic-interfaces-guest]
version = ">=1.1.0-dev, <1.2.0-0"
default-features = false
features = [
    "component-v0-6",
]

[dependencies.jsonschema]
version = "0.45"
default-features = false

[features]
default = [
    "state-store",
]
state-store = [
    "greentic-interfaces-guest/state-store",
]

[dev-dependencies]
serde_json = "1"

[build-dependencies]
serde_json = "1"

[build-dependencies.greentic-types]
version = ">=1.1.0-dev, <1.2.0-0"

[target."cfg(target_arch = \"wasm32\")".dependencies.wit-bindgen]
version = "0.54"
default-features = false
features = [
    "macros",
    "realloc",
]
