[package]
name = "component-adaptive-card"
version = "0.2.1"
edition = "2024"
license = "MIT"
rust-version = "1.91"
description = "Greentic component component-adaptive-card"
repository = "https://github.com/greenticai/component-adaptive-card"
build = "build.rs"
authors = ["maarten"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
world = "greentic:component/component-v0-v6-v0@0.6.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
once_cell = "1.19"
greentic-types = { version = "0.4" }
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["component-v0-6"] }
handlebars = "6"
jsonschema = { version = "0.45", default-features = false }
blake3 = "1"
ciborium = "0.2"

[features]
default = ["state-store"]
state-store = ["greentic-interfaces-guest/state-store"]

[dev-dependencies]
serde_json = "1"

[build-dependencies]
greentic-types = { version = "0.4" }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { version = "0.54", default-features = false, features = ["macros", "realloc"] }
